@@ -12,6 +12,7 @@
 	* Fixed gcc 4.0 compilation problems.
 	* Added missing system.h inclusion for mempcpy.
 	* Added default implementation of strsignal.
+	* Added default implementation of killpg.
 
 2005-10-26  Herbert Xu <herbert@gondor.apana.org.au>
 
